--- a/inventory.ini
+++ b/inventory.ini
@@ -3,11 +3,13 @@
 [web]
 172.31.20.126
 
-[db]
-172.31.20.128
+[localhost]
+localhost
 
-[app]
-172.31.20.129
+[localhost:vars]
+Course="Devops with AWS"
+Trainer="ABC"
+Duration="3 months"
 
 [all:children]
 web
