--- a/08-vars-inventory.yaml
+++ b/08-vars-inventory.yaml
@@ -6,4 +6,4 @@
     Timings: "07.15 to 8.45AM IST"
   - name: Print Information
     ansible.builtin.debug:
-      msg: "Hi,I'm learning {{Course}} from trainer {{Trainer}}, duration is {{Duration}} and timings are {{Timinings}}"
+      msg: "Hi,I'm learning {{Course}} from trainer {{Trainer}}, duration is {{Duration}} and timings are {{Timings}}"
