--- a/10-vars-preference.yaml
+++ b/10-vars-preference.yaml
@@ -13,7 +13,7 @@
     # vars:
     #   WISHES: "Morning from TASK variable"
     ansible.builtin.debug:
-      msg: "Hello, Good {{Wishes}"
+      msg: "Hello, Good {{Wishes}}"
 
 # 1. arguments
 # 2. Task level
