--- a/12-conditions.yaml
+++ b/12-conditions.yaml
@@ -4,4 +4,7 @@
   tasks:
   - name: check user exists or not
     ansible.built.command: id expense
-    
+
+  - name:
+    ansible.builtin.debug:
+      msg: "Hello"  
