--- a/16-loops.yaml
+++ b/16-loops.yaml
@@ -5,8 +5,8 @@
   - name: Install packages
     ansible.builtin.dnf:
       name: "{{ item }}"
-      state: latest
+      state: "{{ item.state}}"
     loop:
-    - mysql
-    - nginx
-    - postfix
+    - { name: 'mysql', state: 'latest' }
+    - { name: 'nginx', state: 'absent' }
+    - { name: 'postfix', state: 'absent' }
