--- a/16-loops.yaml
+++ b/16-loops.yaml
@@ -4,8 +4,8 @@
   tasks:
   - name: Install packages
     ansible.builtin.dnf:
-      name: "{{ item }}"
-      state: "{{ item.state}}"
+      name: "{{ item.name }}"
+      state: "{{ item.state }}"
     loop:
     - { name: 'mysql', state: 'latest' }
     - { name: 'nginx', state: 'absent' }
